# mdm-config-reader

./: Cargo.toml  README.md  browser.js  flake.nix  index.d.ts  index.js  mdm-config-reader.wasi-browser.js  mdm-config-reader.wasi.cjs  package.json  simple-test.js
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: lib.rs  windows.rs
