[package]
authors = ["Gian-Reto Tarnutzer <hi@giantarnutzer.com>"]
edition = "2021"
name = "mdm_config_reader"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "ApplicationModel",
  "Foundation_Collections",
  "Storage"
]}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
